Payment Request API - PaymentDetailsUpdate requires "total" https://bugs.webkit.org/show_bug.cgi?id=220561 <rdar://problem/73204405>

Reviewed by Andy Estes.

Source/WebCore:

Test: http/tests/paymentrequest/updateWith-error.https.html

* Modules/paymentrequest/PaymentDetailsUpdate.h:
* Modules/paymentrequest/PaymentRequest.cpp:
(WebCore::PaymentRequest::settleDetailsPromise):
Use `Optional` for `total` so that it's possible to know when it's provided or not.
Only attempt to parse the `total` when it's provided.

LayoutTests:

* http/tests/paymentrequest/updateWith-error.https.html: Added.
* http/tests/paymentrequest/updateWith-error.https-expected.txt: Added.


Canonical link: https://commits.webkit.org/233148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271615 268f45cc-cd09-0410-ab3c-d52691b4dbfc