Source/WebCore/Modules/paymentrequest/PaymentDetailsUpdate.h
@@ -31,13 +31,14 @@
 #include "PayerErrorFields.h"
 #include "PaymentDetailsBase.h"
 #include "PaymentItem.h"
+#include <wtf/Optional.h>
 #include <wtf/text/WTFString.h>
 
 namespace WebCore {
 
 struct PaymentDetailsUpdate final : PaymentDetailsBase {
     String error;
-    PaymentItem total;
+    Optional<PaymentItem> total;
     AddressErrors shippingAddressErrors;
     PayerErrorFields payerErrors;
     JSC::Strong<JSC::JSObject> paymentMethodErrors;
